# system_design_task2

./: Dockerfile  ReadMe.md  openapi.yaml  pyproject 2.toml  pyproject.toml  requirements.txt
app/: auth.py  main.py  models.py  schemas.py  storage.py
tests/: test_api.py
